--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
 body{
 color:white;
   backgraud:blue;
-  margin:O
+  margin:Opx;
+}
+
+header{
+}
+border-bottom:solid 2px rgb(42,122,228);
+
+
+
+section{
+}
+  background:rgb(184,156,213);
+  padding-bottom:80px;
+  padding-top:80px;
+  display:flex;
+  justify-content:center;
+.chamada-texto{
+  margin-right:5%;
+}
